<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Car-Kei-Bo -Fuel mileage recorder-</string>
	<string name="title_config">Configuration</string>
	<string name="title_carlist">My Car list</string>
	<string name="title_addcar">Add My Car</string>
	<string name="title_fuelMileageAdd">Add Fuel mileage data</string>
	<string name="title_fuelMileageList">Fuel mileage list</string>
	<string name="label_carName">Car Name</string>
	<string name="label_cb_setdfault">Set Default Car</string>
	<string name="label_hint_inputYourCarName">input your car name....</string>
	<string name="label_btn_addCar">Add Car</string>
	<string name="label_btn_cancel">Cancel</string>
	<string name="label_btn_addfuelmileagerecord">Add Fuel mileage record....</string>
	<string name="label_amountOfOil">Amount of oil</string>
	<string name="label_odometer">TRIP METER</string>
	<string name="label_unitPrice">Unit Price</string>
	<string name="label_dateOfRefuel">Date of Refuel</string>
	<string name="label_btn_addRefuelRecord">Add Refuel record</string>
	<string name="lael_btn_cancel_AddRefuelRecord">Cancel</string>
	<string name="label_UNIT_distance_kirometer">km</string>
	<string name="label_UNIT_distance_mile">mile</string>
	<string name="label_UNIT_fuel_litter">Litter</string>
	<string name="label_UNIT_fuel_gallon">Gallon</string>
	<string name="label_UNIT_money_jpy">JPY</string>
	<string name="label_UNIT_money_usd">U.S.D.</string>
	<string name="label_fuelmileage">Fuel Mileage : </string>
	<string name="label_runningcost">Running Costs : </string>
	<string name="opmenu_close_app">Close App.</string>
	<string name="opmenu_call_preference">Preference</string>
	<string name="opmenu_carlist">My Car List</string>
	<string name="opmenu_addcar">Add My Car</string>
	<string name="config_title_price">Price Unit</string>
	<string name="config_title_distance">Distance Unit</string>
	<string name="config_title_volume">Volume Unit(liquid)</string>
	<string name="tv_label_defaultcar">Default Car Name : </string>
	<string name="label_spinner_price">Price Unit</string>
	<string name="label_spinner_distance">Distance Unit</string>
	<string name="label_spinner_volume">Volume Unit</string>
	<string name="ctxitem_show_mileage">Show Fuel Mileage list</string>
	<string name="ctxitem_add_mileage">Add fuel Mileage record...</string>
	<string name="ctxitem_set_default_car">Set this car as default</string>
	<string name="ctxitem_edit_car_preference">Edit Car preference</string>
	<string name="ctxitem_delete_car">Delete this Car</string>
	<string name="ctxmenutitle_carlist">Car List menu</string>
	<string name="toastmsg_addcar1"> has added.</string>
	<string name="toastmsg_addcar2">You can add another car.</string>
	<string name="toastmsg_addcar3">Press \"back\" key to stop adding car.</string>
	<string name="label_mileagelist_suffix">\'s Fuel Mileage list</string>
	<string name="adbuilder_confirm_deletecar">Do you wish to delete this car from database?</string>
	<string name="adbuilder_confirm_deletemileage">Do you wish to delete related mileage records from database?</string>
	<string name="adbuilder_confirm_reorg_db">Do you want the reorganization of the database?</string>
	<string name="label_timeOfRefuel">Time of Refuel</string>
	<string name="label_comments">Comments</string>
	<string name="label_btn_edit">Edit...</string>
	<string name="toastmsg_addmileage1"> \'s fuel mileage record has added to database.</string>
	<string name="toastmsg_addmileage2">Refuel date : </string>
	<string name="toastmsg_addmileage3">Amount of Oil : </string>
	<string name="toastmsg_addmileage4">Distance : </string>
	<string name="adtitle_detail_of_refuel">Detail of refuel record</string>
	<string name="adbuilder_toast_deleterecord"> \'s car record and related mileage have deleted.</string>
	<string name="pref_title_newbsdlicense">New BSD License</string>
	<string name="pref_title_aboutthis">About this Software</string>
	<string name="pref_title_sortorder">Sort order</string>
	<string name="pref_title_softwareversion">Software version</string>
	<string name="pref_title_changelog">CHANGELOG</string>
	<string name="pref_title_showchangelog">Click to show CHANGELOG on next screen</string>
	<string name="pref_text_versionstring">0.7</string>
	<string name="pref_order_ascend">Show in ascending order by date</string>
	<string name="pref_order_descend">Show in descending order in date</string>
	<string name="version_0_6">Limited release on the Google Drive.</string>
	<string name="version_0_6__p1">Fixed a bug in the internal processing.</string>
	<string name="version_0_6__p2">Fixed a bug that might appear in the TimePicker time is incorrect.</string>
	<string name="label_totalamountofoil">Total amount of oil</string>
	<string name="pref_title_descend">Fuel mileage record</string>
	<string name="pref_title_refuelstat">Subtotal of oil</string>
	<string name="pref_title_mileagestat">Subtotal of fuel mileage</string>
	<string name="pref_title_runningcoststat">Subtotal of running costs</string>
	<string name="ctxitem_delete_refuel_record">Delete this refule record</string>
	<string name="ctxitem_edit_refuel_record">Edit this refuel record</string>
	<string name="pref_title_aboutthelicense">About the license</string>
	<string name="new_bsd_license">"Copyright 2012 Formula97.NET All rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n  1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n  2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n  3. Neither the name of the Fourmula97.NET nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.\n\nTHIS SOFTWARE IS PROVIDED BY THE FREEBSD PROJECT ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE FREEBSD PROJECT OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES '(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION') HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT '(INCLUDING NEGLIGENCE OR OTHERWISE') ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the Formula97.NET."</string>
	<string name="intent_launch_aboutlicense">AboutLicense.class</string>
	<string name="ctxmenutitle_mileagelist">Fuel Mileage list menu</string>
	<string name="pref_title_statrange">Statistics range</string>
	<string name="pref_summary_statrange">Sets the time to do statistics</string>
	<string name="pref_stat_3month">Past 3 months</string>
	<string name="pref_stat_6month">Past 6 months</string>
	<string name="pref_stat_12month">Past 12 months(1 year)</string>
	<string name="pref_stat_allrange">All periods</string>
	<string name="label_btn_showstats">Show Statistics</string>
	<string name="tv_title_statType">Statistics Type : </string>
	<string name="spinneritem_statType_mileage">Fuel Mileage</string>
	<string name="spinneritem_statType_Refuel">Subtotal of refueling</string>
	<string name="spinneritem_statType_RunningCost">Running costs</string>
	<string name="tv_label_statPeriod">Period</string>
	<string name="tv_label_statValue">Value</string>
	<string name="pref_title_returnprevious">Return to the previous screen</string>
	<string name="pref_title_screentransition">Screen Transition</string>
	<string name="pref_title_returnifadd">Return to the previous screen to add a record</string>
	<string name="pref_title_donotreturn">Do not return to the previous screen to add a record</string>
	<string name="tv_title_statPeriod">Statistic period : </string>
	<string name="label_btn_updatefuelmileagerecord">Update Refuel Record</string>
	<string name="toastmsg_addmileage11"> \'s fuel mileage record has modified.</string>
	<string name="adbuilder_confirm_deletefuelrecord">Do you wish to delete this fuel mileage from database?</string>
	<string name="adbuilder_toast_deletefuel"> \'s mileage has deleted.</string>
	<string name="export_to_sd">Export to SD card</string>
	<string name="import_from_sd">Import from SD card</string>
	<string name="import_caution_body">All data will be erased.\nDo you want to run it?</string>
	<string name="import_caution_title">Caution!</string>
	<string name="specify_import_file">Specify file name to import :</string>
	<string name="specify_export_file">Specify file name to export :</string>

</resources>