<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/optionsmenu_carlist" android:title="@string/opmenu_carlist"></item>
	<item android:id="@+id/optionsmenu_addcar" android:title="@string/opmenu_addcar"></item>

	<item android:id="@+id/import_sd" android:title="@string/import_from_sd" android:icon="@android:drawable/ic_menu_upload"></item>
	<item android:id="@+id/export_sd" android:title="@string/export_to_sd" android:icon="@android:drawable/ic_menu_save"></item>
	<item android:id="@+id/optionsmenu_call_preference"
		android:title="@string/opmenu_call_preference"
		android:icon="@android:drawable/ic_menu_preferences"></item>

	<item android:id="@+id/optionsmenu_closeAPP"
		android:title="@string/opmenu_close_app"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>






</menu>